--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- aboutus section start -->
 
         <section class="aboutus-section">
-            <img src="images\about_us-section\owner.svg" alt="man" />
+            <img src="images\aboutus-section\owner.svg" alt="man" />
             <div class="aboutus-section-content">
                 <h6>About us</h6>
                 <p>
