--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- hero section start -->
 
-    <div class="hero-section">
+    <section class="hero-section">
         <h1 class="hero-text">Building things is our mission.</h1>
         <div class="hero-section-dialogbox">
             <div class="hero-section-dialogbox-content">
@@ -63,7 +63,7 @@
                 </button>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- hero section end -->
 
@@ -83,7 +83,7 @@
                 <p>Cursus semper tellus volutpat aliquet lacus.</p>
             </div>
             <div>
-                <img src="images\reputation-section\pencil.svg" alt="headphone" />
+                <img src="images\reputation-section\pencil.svg" alt="pencil" />
                 <h6>Best Designs</h6>
                 <p>Ultricies at ipsum nunc, tristique nam lectus.</p>
             </div>
