--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <p>The National University of Architecture</p>
       </div>
       <div class="hero-section-buttons">
-        <button class="button">
+        <button class="hero-button">
           <i class="fa-solid fa-arrow-left"></i>
           <p>Back</p>
         </button>
-        <button class="button">
+        <button class="hero-button">
           <p>Next</p>
           <i class="fa-solid fa-arrow-right"></i>
         </button>
@@ -92,6 +92,7 @@
       </div>
     </section>
   </section>
+
   <!--reputation section end  -->
 
   <!-- about-us section start -->
@@ -161,36 +162,38 @@
   <!-- experience section start -->
 
   <section class="experience-section">
-    <div class="experience-section-left">
-      <div class="project-completed">
-        <h5>123</h5>
-        <p class="left-content">Project Completed</p>
+    <div>
+      <div class="experience-section-left">
+        <div class="happy-clients experience-card">
+          <h5>84</h5>
+          <p class="left-content">Happy Clients</p>
+          <img src="images\experience_section\happy-clients.svg" alt="hand" class="handshake" />
+        </div>
+        <div class="project-completed experience-card">
+          <h5>123</h5>
+          <p class="left-content">Project Completed</p>
+          <img src="images\experience_section\project-completed.svg" alt="project completed"
+            class="project-completed-image" />
+        </div>
+        <div class="awards-win experience-card">
+          <h5>37</h5>
+          <p class="left-content">Awards Win</p>
+          <img src="images\experience_section\award.svg" alt="awards" class="awards" />
+        </div>
+        <div class="business-years experience-card">
+          <h5>30</h5>
+          <p class="left-content">Business Year</p>
+          <img src="images\experience_section\years.svg" alt="business year" class="business-year-image" />
+        </div>
       </div>
-      <div class="happy-clients">
-        <h5>84</h5>
-        <p class="left-content">Happy Clients</p>
+      <div class="experience-section-right">
+        <h3>30 Years Experience</h3>
+        <p>
+          Our company has been the leading provided construction services to
+          clients throughout the USA since 1988
+        </p>
+        <button class="experience-button">Contact Us</button>
       </div>
-      <div class="business-years">
-        <h5>30</h5>
-        <p class="left-content">Business Year</p>
-      </div>
-      <div class="awards-win">
-        <h5>37</h5>
-        <p class="left-content">Awards Win</p>
-      </div>
-      <img src="images\experience_section\project-completed.svg" alt="project completed"
-        class="project-completed-image" />
-      <img src="images\experience_section\happy-clients.svg" alt="hand" class="handshake" />
-      <img src="images\experience_section\years.svg" alt="business year" class="business-year-image" />
-      <img src="images\experience_section\award.svg" alt="awards" class="awards" />
-    </div>
-    <div class="experience-section-right">
-      <h3>30 Years Experience</h3>
-      <p>
-        Our company has been the leading provided construction services to
-        clients throughout the USA since 1988
-      </p>
-      <button class="experience-button">Contact Us</button>
     </div>
   </section>
 
@@ -211,27 +214,28 @@
   <!-- advertisment section end -->
 
   <!-- project section start -->
+  
   <section class="project-section">
     <div class="project-section-left">
       <h6>Projects</h6>
       <ul class="project-left-content">
-        <li id="selected-project"><b>All</b></li>
-        <li><b>Commercial</b></li>
-        <li><b>Residential</b></li>
-        <li><b>Other</b></li>
+        <li id="selected-project">All</li>
+        <li>Commercial</li>
+        <li>Residential</li>
+        <li>Other</li>
       </ul>
     </div>
     <div class="project-section-right">
       <div class="project-section-right-top">
         <div>
-          <img src="images/projects_section/wildstone.svg" alt="building" />
+          <img src="images/projects_section/wildstone.svg" alt="building" class="project-image" />
           <div class="project-right-content">
             <h6>Wildstone Infra Hotel</h6>
             <p>2715 Ash Dr. San Jose, South Dakota</p>
           </div>
         </div>
         <div>
-          <img src="images/projects_section/stone-building.svg" alt="building" />
+          <img src="images/projects_section/stone-building.svg" alt="building" class="project-image" />
           <div class="project-right-content">
             <h6>Wish Stone Building</h6>
             <p>2972 Westheimer Rd. Santa Ana, Illinois</p>
@@ -240,14 +244,14 @@
       </div>
       <div class="project-section-right-bottom">
         <div>
-          <img src="images/projects_section/parkinston.svg" alt="building" />
+          <img src="images/projects_section/parkinston.svg" alt="building" class="project-image" />
           <div class="project-right-content">
             <h6>Mr. Parkinston's House</h6>
             <p>3517 W. Gray St. Utica, Pennsylvania</p>
           </div>
         </div>
         <div>
-          <img src="images/projects_section/oregano.svg" alt="building" />
+          <img src="images/projects_section/oregano.svg" alt="building" class="project-image" />
           <div class="project-right-content">
             <h6>Oregano Height</h6>
             <p>2464 Royal Ln. Mesa, New Jersey</p>
@@ -289,7 +293,8 @@
 
   <!-- form section end -->
 
-  <!-- bottom details section -->
+  <!-- bottom section start -->
+
   <section class="bottom-section">
     <div>
       <div class="bottom-section-left">
@@ -325,6 +330,7 @@
       </div>
     </div>
   </section>
+
   <!-- bottom section end -->
 
   <!-- footer section start -->
