--- a/index.html
+++ b/index.html
@@ -126,33 +126,30 @@
   <section class="service-section">
     <h6>Services</h6>
     <div class="service-section-items">
-      <div class="service-section-items-top">
-        <div class="service-items-white">
-          <img src="images/service-section/construction.svg" alt="construction" />
-          <span>Construction</span>
-        </div>
-        <div class="service-items-blue">
-          <img src="images/service-section/renovation.svg" alt="renovation" />
-          <span>Renovation</span>
-        </div>
-        <div class="service-items-white">
-          <img src="images/service-section/consultation.svg" alt="consultation" />
-          <span>Constultation</span>
-        </div>
+      <div class="service-items-white">
+        <img src="images/service-section/construction.svg" alt="construction" />
+        <span>Construction</span>
       </div>
-      <div class="service-section-items-bottom">
-        <div class="service-items-blue">
-          <img src="images/service-section/repair.svg" alt="repair-services" />
-          <span>Repair-Service</span>
-        </div>
-        <div class="service-items-white">
-          <img src="images/service-section/architecture.svg" alt="architecture" />
-          <span>Architecture</span>
-        </div>
-        <div class="service-items-blue">
-          <img src="images/service-section/electric.svg" alt="electric" />
-          <span>Electric</span>
-        </div>
+      <div class="service-items-blue">
+        <img src="images/service-section/renovation.svg" alt="renovation" />
+        <span>Renovation</span>
+      </div>
+      <div class="service-items-white">
+        <img src="images/service-section/consultation.svg" alt="consultation" />
+        <span>Constultation</span>
+      </div>
+
+      <div class="service-items-blue">
+        <img src="images/service-section/repair.svg" alt="repair-services" />
+        <span>Repair-Service</span>
+      </div>
+      <div class="service-items-white">
+        <img src="images/service-section/architecture.svg" alt="architecture" />
+        <span>Architecture</span>
+      </div>
+      <div class="service-items-blue">
+        <img src="images/service-section/electric.svg" alt="electric" />
+        <span>Electric</span>
       </div>
     </div>
   </section>
@@ -214,7 +211,7 @@
   <!-- advertisment section end -->
 
   <!-- project section start -->
-  
+
   <section class="project-section">
     <div class="project-section-left">
       <h6>Projects</h6>
@@ -226,37 +223,43 @@
       </ul>
     </div>
     <div class="project-section-right">
-      <div class="project-section-right-top">
-        <div>
-          <img src="images/projects_section/wildstone.svg" alt="building" class="project-image" />
-          <div class="project-right-content">
-            <h6>Wildstone Infra Hotel</h6>
-            <p>2715 Ash Dr. San Jose, South Dakota</p>
-          </div>
-        </div>
-        <div>
-          <img src="images/projects_section/stone-building.svg" alt="building" class="project-image" />
-          <div class="project-right-content">
-            <h6>Wish Stone Building</h6>
-            <p>2972 Westheimer Rd. Santa Ana, Illinois</p>
-          </div>
+      <div class="card">
+        <img src="images/projects_section/wildstone.svg" alt="building" class="project-image" />
+        <div class="project-right-content">
+          <h6>Wildstone Infra Hotel</h6>
+          <p>2715 Ash Dr. San Jose, South Dakota</p>
         </div>
       </div>
-      <div class="project-section-right-bottom">
-        <div>
-          <img src="images/projects_section/parkinston.svg" alt="building" class="project-image" />
-          <div class="project-right-content">
-            <h6>Mr. Parkinston's House</h6>
-            <p>3517 W. Gray St. Utica, Pennsylvania</p>
-          </div>
+      <div class="card">
+        <img src="images/projects_section/stone-building.svg" alt="building" class="project-image" />
+        <div class="project-right-content">
+          <h6>Wish Stone Building</h6>
+          <p>2972 Westheimer Rd. Santa Ana, Illinois</p>
         </div>
-        <div>
-          <img src="images/projects_section/oregano.svg" alt="building" class="project-image" />
-          <div class="project-right-content">
-            <h6>Oregano Height</h6>
-            <p>2464 Royal Ln. Mesa, New Jersey</p>
-          </div>
+      </div>
+      <div class="card">
+        <img src="images/projects_section/parkinston.svg" alt="building" class="project-image" />
+        <div class="project-right-content">
+          <h6>Mr. Parkinston's House</h6>
+          <p>3517 W. Gray St. Utica, Pennsylvania</p>
         </div>
+      </div>
+      <div class="card">
+        <img src="images/projects_section/oregano.svg" alt="building" class="project-image" />
+        <div class="project-right-content">
+          <h6>Oregano Height</h6>
+          <p>2464 Royal Ln. Mesa, New Jersey</p>
+        </div>
+      </div>
+      <div class="project-section-buttons">
+        <button class="hero-button">
+          <i class="fa-solid fa-arrow-left"></i>
+          <p>Back</p>
+        </button>
+        <button class="hero-button">
+          <p>Next</p>
+          <i class="fa-solid fa-arrow-right"></i>
+        </button>
       </div>
     </div>
   </section>
