--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
     <h2>Our Reputation</h2>
     <section class="reputation-section-content">
       <div>
-        <img src="images\reputation-section\headphone.svg" alt="headphone" />
+        <img src="images/reputation-section/headphone.svg" alt="headphone" />
         <h6>Best Services</h6>
         <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum</p>
       </div>
       <div>
-        <img src="images\reputation-section\headphone.svg" alt="headphone" />
+        <img src="images/reputation-section/headphone.svg" alt="headphone" />
         <h6>Best Teams</h6>
         <p>Cursus semper tellus volutpat aliquet lacus.</p>
       </div>
       <div>
-        <img src="images\reputation-section\pencil.svg" alt="pencil" />
+        <img src="images/reputation-section/pencil.svg" alt="pencil" />
         <h6>Best Designs</h6>
         <p>Ultricies at ipsum nunc, tristique nam lectus.</p>
       </div>
@@ -100,7 +100,7 @@
   <section class="about-us-section">
     <div>
       <div class="about-image">
-        <img src="images\about-us-section\owner.svg" alt="man" />
+        <img src="images/about-us-section/owner.svg" alt="man" />
       </div>
       <div class="about-us-section-content">
         <h6>About us</h6>
@@ -164,23 +164,23 @@
         <div class="happy-clients experience-card">
           <h5>84</h5>
           <p class="left-content">Happy Clients</p>
-          <img src="images\experience_section\happy-clients.svg" alt="hand" class="handshake" />
+          <img src="images/experience_section/happy-clients.svg" alt="hand" class="handshake" />
         </div>
         <div class="project-completed experience-card">
           <h5>123</h5>
           <p class="left-content">Project Completed</p>
-          <img src="images\experience_section\project-completed.svg" alt="project completed"
+          <img src="images/experience_section/project-completed.svg" alt="project completed"
             class="project-completed-image" />
         </div>
         <div class="awards-win experience-card">
           <h5>37</h5>
           <p class="left-content">Awards Win</p>
-          <img src="images\experience_section\award.svg" alt="awards" class="awards" />
+          <img src="images/experience_section/award.svg" alt="awards" class="awards" />
         </div>
         <div class="business-years experience-card">
           <h5>30</h5>
           <p class="left-content">Business Year</p>
-          <img src="images\experience_section\years.svg" alt="business year" class="business-year-image" />
+          <img src="images/experience_section/years.svg" alt="business year" class="business-year-image" />
         </div>
       </div>
       <div class="experience-section-right">
